--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,3 +1,17 @@
 {
-  "Короткий язык": "RU"
+  "Короткий язык": "RU",
+  "Об институте": "Об институте",
+  "Новости": "Новости",
+  "Партнеры": "Партнеры",
+  "Научные отделы": "Научные отделы",
+  "Ученый совет": "Ученый совет",
+  "Совет молодых ученых": "Совет молодых ученых",
+  "Образование": "Образование",
+  "Научная библиотека": "Научная библиотека",
+  "Корзина": "Корзина",
+  "Администрация": "Администрация",
+  "Объявления о конкурсах": "Объявления о конкурсах",
+  "Нормативно-правовые акты": "Нормативно-правовые акты",
+  "Информация о закупках": "Информация о закупках",
+  "Вакансии": "Вакансии"
 }
