--- a/client/public/locales/en/mainPage.json
+++ b/client/public/locales/en/mainPage.json
@@ -1,3 +1,5 @@
 {
-
+  "Всероссийский научно-исследовательский ветеринарный институт птицеводства": "All-Russian Scientific Research Veterinary Institute of Poultry Farming",
+  "филиал ФНЦ ВНИТИП": "branch of FNC VNITIP",
+  "К новостям": "To the news"
 }
