--- a/client/public/locales/ru/mainPage.json
+++ b/client/public/locales/ru/mainPage.json
@@ -1,3 +1,5 @@
 {
-
+  "Всероссийский научно-исследовательский ветеринарный институт птицеводства": "Всероссийский научно-исследовательский ветеринарный институт птицеводства",
+  "филиал ФНЦ ВНИТИП": "филиал ФНЦ ВНИТИП",
+  "К новостям": "К новостям"
 }
