--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -13,5 +13,7 @@
   "Объявления о конкурсах": "Объявления о конкурсах",
   "Нормативно-правовые акты": "Нормативно-правовые акты",
   "Информация о закупках": "Информация о закупках",
-  "Вакансии": "Вакансии"
+  "Вакансии": "Вакансии",
+  "Научная и образовательная деятельность": "Научная и образовательная деятельность",
+  "Услуги": "Услуги"
 }
