--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,17 +1,19 @@
 {
   "Короткий язык": "EN",
-  "Об институте": "Об институте",
-  "Новости": "Новости",
-  "Партнеры": "Партнеры",
-  "Научные отделы": "Научные отделы",
-  "Ученый совет": "Ученый совет",
-  "Совет молодых ученых": "Совет молодых ученых",
-  "Образование": "Образование",
-  "Научная библиотека": "Научная библиотека",
-  "Корзина": "Корзина",
-  "Администрация": "Администрация",
-  "Объявления о конкурсах": "Объявления о конкурсах",
-  "Нормативно-правовые акты": "Нормативно-правовые акты",
-  "Информация о закупках": "Информация о закупках",
-  "Вакансии": "Вакансии"
+  "Об институте": "About the Institute",
+  "Новости": "News",
+  "Партнеры": "Partners",
+  "Научные отделы": "Scientific departments",
+  "Ученый совет": "Academic Council",
+  "Совет молодых ученых": "Council of Young Scientists",
+  "Образование": "Education",
+  "Научная библиотека": "Scientific Library",
+  "Корзина": "Cart",
+  "Администрация": "Administration",
+  "Объявления о конкурсах": "Announcements of contests",
+  "Нормативно-правовые акты": "Regulatory legal acts",
+  "Информация о закупках": "Purchase Information",
+  "Вакансии": "Jobs",
+  "Научная и образовательная деятельность": "Scientific and educational activities",
+  "Услуги": "Services"
 }
