added content in mainPage, added slider, image, changed mapping for stack, card

--- a/client/public/locales/en/mainPage.json
+++ b/client/public/locales/en/mainPage.json
@@ -1,5 +1,8 @@
 {
   "Всероссийский научно-исследовательский ветеринарный институт птицеводства": "All-Russian Scientific Research Veterinary Institute of Poultry Farming",
   "филиал ФНЦ ВНИТИП": "branch of FNC VNITIP",
-  "К новостям": "To the news"
+  "К новостям": "To the news",
+  "О нас": "О нас",
+  "текст о нас верхний": "The Institute is a center for the study of bird diseases, has connections with many international organizations, and is a center for coordinating research on bird diseases. The Institute is the base for developing original biopreparations and vaccines that are widely used by practical poultry farming not only in Russia, but also in the near and far abroad.",
+  "текст о нас нижний": "Работа научных отделов ведется в рамках проведения научно-исследовательских работ по государственному заданию по следующим темам:  - «Усовершенствование и разработка методов диагностики и профилактики эймериозов птиц» - «Совершенствование и сравнительный анализ эффективности методов диагностики и средств специфической профилактики вирусных болезней птиц» - «Разработка системы диагностики и контроля респираторных и желудочно-кишечных болезней птиц бактериальной этиологии с использованием препаратов разных классов»  Институт является разработчиком вакцин:  - против вирусного энтерита гусей (живой и инактивированной); - вирусного гепатита утят; - сальмонеллеза; - пастереллеза; - кокцидиоза птицы (совместно с ООО «НПП «Авивак»); - инфекционного ларинготрахеита.  Кроме того, на сегодняшний день, Институт осуществляет работу по содержанию биоресурсной коллекции мясных кур нового отечественного кросса «Смена-9»."
 }
