--- a/client/public/locales/ru/mainPage.json
+++ b/client/public/locales/ru/mainPage.json
@@ -1,5 +1,8 @@
 {
   "Всероссийский научно-исследовательский ветеринарный институт птицеводства": "Всероссийский научно-исследовательский ветеринарный институт птицеводства",
   "филиал ФНЦ ВНИТИП": "филиал ФНЦ ВНИТИП",
-  "К новостям": "К новостям"
+  "К новостям": "К новостям",
+  "О нас": "О нас",
+  "текст о нас верхний": "Институт является центром по изучению болезней птиц, имеет связи со многими международными организациями, является центром координации НИР по болезням птиц. На базе Института проводятся разработки оригинальных биопрепаратов, вакцин, которые широко используются практическими птицеводствами не только в России, но и в дальнем и ближнем зарубежье.",
+  "текст о нас нижний": "Работа научных отделов ведется в рамках проведения научно-исследовательских работ по государственному заданию по следующим темам:  \n- «Усовершенствование и разработка методов диагностики и профилактики эймериозов птиц» \n- «Совершенствование и сравнительный анализ эффективности методов диагностики и средств специфической профилактики вирусных болезней птиц» \n- «Разработка системы диагностики и контроля респираторных и желудочно-кишечных болезней птиц бактериальной этиологии с использованием препаратов разных классов»  \n\nИнститут является разработчиком вакцин:  \n- против вирусного энтерита гусей (живой и инактивированной); \n- вирусного гепатита утят; \n- сальмонеллеза; - пастереллеза; \n- кокцидиоза птицы (совместно с ООО «НПП «Авивак»); \n- инфекционного ларинготрахеита.  Кроме того, на сегодняшний день, Институт осуществляет работу по содержанию биоресурсной коллекции мясных кур нового отечественного кросса «Смена-9»."
 }
