added section partners & carousel, mainPageBanner animation, footer

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -15,5 +15,13 @@
   "Информация о закупках": "Purchase Information",
   "Вакансии": "Jobs",
   "Научная и образовательная деятельность": "Scientific and educational activities",
-  "Услуги": "Services"
+  "Услуги": "Services",
+  "Права защищены": "2025 © VNIVIP. All rights reserved",
+  "Номер телефона": "Phone number",
+  "Общая почта": "General mail",
+  "Адрес": "Address",
+  "Соцсети": "Social networks",
+  "Контакты": "Contacts",
+  "Меню": "Menu",
+  "Навигация": "Navigation"
 }
