--- a/client/public/locales/ru/mainPage.json
+++ b/client/public/locales/ru/mainPage.json
@@ -8,5 +8,6 @@
   "Об институте": "Об институте",
   "слайдер текст верхний": "Всероссийский научно-исследовательский ветеринарный институт птицеводства — \nИнститут является центром по изучению болезней птиц",
   "слайдер текст нижний": "На базе Института проводятся разработки оригинальных биопрепаратов, вакцин, которые широко используются практическими птицеводствами не только в России, но и в дальнем и ближнем зарубежье. \n\nИнститут является разработчиком вакцин:  \n- против вирусного энтерита гусей (живой и инактивированной); \n- вирусного гепатита утят; - сальмонеллеза; - пастереллеза; \n- кокцидиоза птицы (совместно с ООО «НПП «Авивак»);",
-  "СОБЫТИЯ": "СОБЫТИЯ"
+  "СОБЫТИЯ": "СОБЫТИЯ",
+  "ПАРТНЕРЫ": "ПАРТНЕРЫ"
 }
