--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -15,5 +15,13 @@
   "Информация о закупках": "Информация о закупках",
   "Вакансии": "Вакансии",
   "Научная и образовательная деятельность": "Научная и образовательная деятельность",
-  "Услуги": "Услуги"
+  "Услуги": "Услуги",
+  "Права защищены": "2025 © ВНИВИП. Все права защищены",
+  "Номер телефона": "Номер телефона",
+  "Общая почта": "Общая почта",
+  "Адрес": "Адрес",
+  "Соцсети": "Соцсети",
+  "Контакты": "Контакты",
+  "Меню": "Меню",
+  "Навигация": "Навигация"
 }
